Attempt to fix background on mobile

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -5,7 +5,8 @@
   padding: 0.2em 0;
 }
 body {
-  padding: 0;
+
+  /* padding: 0;
   background: #000 url("/images/Hestia_dark.jpg") !important;
   background-repeat: no-repeat !important;
   background-position: 0% 0% !important;
@@ -16,7 +17,25 @@ body {
   -moz-background-size: cover !important;
   -o-background-size: cover !important;
   z-index: 1;
+  font-family: Didot !important; */
+  padding: 0;
+  background-color: black !important;
+  z-index: 1;
   font-family: Didot !important;
+}
+body::before {
+  content: ' ';
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: white;
+  background: url('/images/Hestia_dark.jpg') no-repeat center center;
+  background-position: 0% 0%;
+  background-size: cover;
+  will-change: transform;
+  z-index: -1;
 }
 h1, h2, h3, h4 {
   color: white;
@@ -95,22 +114,27 @@ div#js-navbar-collapse {
   overflow: hidden;
 }
 .wsite-social-facebook {
+
   /* background-position-x: 0px; */
   background: url('/images/social/icon_facebook.png') no-repeat;
 }
 .wsite-social-twitter {
+
   /* background-position-x: -39px; */
   background: url('/images/social/icon_twitter.png') no-repeat;
 }
 .wsite-social-instagram {
+
   /* background-position-x: -79px; */
   background: url('/images/social/icon_instagram.png') no-repeat;
 }
 .wsite-social-itunes {
+
   /* background-position-x: -118px; */
   background: url('/images/social/icon_apple.png') no-repeat;
 }
 .wsite-social-spotify {
+
   /* background-position-x: -157px; */
   background: url('/images/social/icon_spotify.png') no-repeat;
 }
@@ -118,6 +142,7 @@ div#js-navbar-collapse {
   background-position-x: -198px;
 }
 .wsite-social-soundcloud {
+
   /* background-position-x: -240px; */
   background: url('/images/social/icon_soundcloud.png') no-repeat;
 }
